fixed site-wrapper overlapping.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -77,8 +77,6 @@ body {
 .site-wrapper {
   max-width: 1280px;
   min-height: calc(100vh - 120px);
-  overflow-x: hidden;
-  overflow-y: auto;
   padding-top: 30px;
   position: relative;
   width: 100%; }
@@ -1255,6 +1253,7 @@ h6 {
 .post-template:not(.page-template) .content {
   animation: op-in .999s ease-out forwards;
   max-width: 1280px;
+  min-height: 850px;
   padding-bottom: 50px;
   padding-top: 30px;
   position: relative; }
